--- a/嵌入式.md
+++ b/嵌入式.md
@@ -156,7 +156,7 @@
 
 可写的位包括：状态寄存器1中的SEC, TB, BP[2:0] ；状态寄存器2中的CMP, LB[3:1], QE, SRL；状态寄存器3中的DRV1, DRV0, WPS。其他的位只读，不受写入状态寄存器指令的影响。LB[3:1]位是OTP的，一旦写入1，就不能重置为0。
 
-非易失性方式写入前必须发送写使能指令（06H）把WEL设为1允许写入。然后发送写状态寄存器指令（01H/31H/11H），最后写入一个字节。发送写使能指令和写状态寄存器指令开始计时，对寄存器的写入将在tw（参见AC电气特性中Write Status Register Time）时间内开始（大概是说，用SPI发送后，要等tw时间才能真正生效？这期间芯片内部把数据真正写入到寄存器）。写入完成后WEL重置0。
+非易失性方式写入前必须发送写使能指令（06H）把WEL设为1允许写入。然后发送写状态寄存器指令（01H/31H/11H），最后写入一个字节。在/CS拉高电平结束传输之后，芯片内部对寄存器的写入将在tw（参见AC电气特性中Write Status Register Time）时间内完成（大概是说，用SPI发送后，要等tw时间才能真正生效？这期间芯片内部把数据真正写入到寄存器）。写入完成后WEL重置0。
 
 易失性方式写入首先发送50H指令，WEL仍为0。掉电后写入的值就会丢失，恢复为非易失性写入的值。SRL、LB位不可从1回到0。发送写入指令后，tSHSL2（参见AC电气特性）时间后寄存器值刷新为写入的值。
 
