--- a/嵌入式.md
+++ b/嵌入式.md
@@ -176,7 +176,7 @@
 
 结束写过程需要把/CS拉高电平。传输结束后tpp时间（参见AC电气特性）后写入才能完成，期间内可以发送读状态寄存器指令检查BUSY位，以确定芯片内部的写入是否完成。
 
-##### 扇区擦除（20H）
+##### 扇区(4KB)擦除（20H）
 
 把指定扇区的所有比特全部设为1。必须先发送写使能指令把WEL设置为1。指令从/CS拉低电平时开始发送，然后发送20H与24位的地址。
 
@@ -246,3 +246,53 @@
 另外就是两个指令操作之间/CS需要保持的高电平时间。文档电气特性这一章最后的时序图中给出的是tSHSL，并且查表得知读取和写入是两个不同的值（tSHSL1，tSHSL2）。
 
 ![w25q16_CS_Deselect_Time.png](images/w25q16_CS_Deselect_Time.png)
+
+### 芯片型号判断
+
+根据手册上的Manufacturer and Device Identification判断。一般软件上只需要读取ID7~ID0，由此判断芯片容量。下面给出对照表。
+
+| 容量    | ID7~ID0 |
+| ------- | ------- |
+| W25Q80  | 13H     |
+| W25Q16  | 14H     |
+| W25Q32  | 15H     |
+| W25Q64  | 16H     |
+| W25Q128 | 17H     |
+| W25Q256 | 18H     |
+
+
+
+## nrf24l01 2.4G 无线通信模块
+
+模块说明书使用了一个名词”有效载荷（Payload）“来指代承担发射与接收任务的一系列硬件资源。
+
+### Enhanced ShockBurst™发射有效载荷
+
+1. 配置CONFIG寄存器的PRIM_RX位为0。
+2. 当需要发送数据时，向TX_ADDR写入接收方地址，向TX_PLD写入要发送的数据。TX-payload的宽度由写入的数据长度决定。必须在CS'拉低电平时连续写入TX-payload，TX_ADDR若未更改则不必重复写入。如果需要接收接收方返回的确认数据包，则应当把接收数据通道0的地址设置为相同地址。
+3. 在CE引脚发送正脉冲，宽度至少10us。
+4. 发送数据：
+   * 给射频前端供电；
+   * 启动内部16MHz时钟；
+   * 打包射频数据包；
+   * 高速传输数据。
+5. 如果配置了自动确认（返回的确认数据包必须从接收通道0进入，且要求自动重传数大于0且ENAA_P0=1），那么设备立即进入接收模式，若在确认时间窗内接收到确认包，那么传输成功。状态寄存器中TX_DS位置1，TX FIFO中的数据被清除。若未接收到确认，开启了自动重传就会重发数据包，重传次数达到ARC_CNT阈值后状态寄存器中MAX_RT位被置1，TX FIFO中的数据不会清除。在TX_DS和MAX_RT都为1时IRQ引脚被拉高电平，要拉低IRQ引脚必须手动写入状态寄存器。
+
+### 数据通道
+
+该模块可实现1toN的通信，其中N最高为6，因此模块有6个接收通道，但只有1个发射通道。接收模式下最多同时接收6个同一频率、不同地址的数据通道。使用**EN_RXADDR**寄存器的低6位配置启用接收数据通道，使用**RX_ADDR_Pn**寄存器决定数据通道n的接收地址（n从0到5）。不同数据通道的接收地址不应该相同。数据通道0可以配置独立的40位（5个字节）的接收地址，而数据通道1\~5的接收地址的高4个字节是共享的，仅最后一个字节独立。反映到硬件实现上，就是RX_ADDR_P0和RX_ADDR_P1都是完整的40位，而RX_ADDR_P2\~5只有8位，2\~5地址的高4字节采用和RX_ADDR_P1高4字节相同的值，即与1共享。使用**EN_AA**寄存器配置6个接收通道的自动确认，使用**RX_PW_Pn**配置数据通道n的通道大小（Payload宽度）。
+
+![nrf24l01_rx_pipe_addressing.png](images/nrf24l01_rx_pipe_addressing.png)
+
+当数据包被某一个数据通道接收且该数据通道配置了自动确认，那么模块就会产生一个具有相同地址的确认数据包。
+
+以下配置为所有数据通道共享：
+
+* CRC 启用/禁用 (CRC在Enhanced ShockBurstTM模式下总是启用)
+* CRC 编码方案（CONFIG寄存器，配置为1字节或2字节）
+* RX 地址宽度（SETUP_AW寄存器，配置为3\~5字节）
+* 信道频率（RF_CH寄存器）
+* 射频数据速率（RF_SETUP寄存器）
+* LNA增益（RF_SETUP寄存器）
+* 射频输出功率（RF_SETUP寄存器）
+
